20220613 corrections